@@ -3,10 +3,10 @@ package hanziToAnki;
 import org.apache.tika.Tika;
 
 import java.io.*;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.Enumeration;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -14,11 +14,7 @@ import java.util.zip.GZIPInputStream;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipFile;
 
-
 public class FileUtils {
-    private static final String DESTINATION_DIR = "/home/dtm/CHANGE_DIR_NAME";
-    private static final int BUFFER_SIZE = 4096;
-    // TODO:consider other types that are similar to the below
     private static final String ZIP_COMPRESSED = "application/x-zip-compressed";
     private static final String ZIP = "application/zip";
     private static final String X_GZIP = "application/x-gzip";
@@ -28,70 +24,67 @@ public class FileUtils {
         return fileToStringArray(new File(filename));
     }
 
-
-    private static List<String> getUnzippedLines(File file) {
-        List<String> combinedList = new ArrayList<>();
+    public static List<String> fileToStringArray(File file) {
         try {
-            ZipFile zip = new ZipFile(file);
+            String contentType = new Tika().detect(file);
 
+            switch (contentType) {
+                case ZIP, ZIP_COMPRESSED -> { return getZipLines(file); }
+                case GZIP, X_GZIP -> { return getGZipLines(file); }
+                default -> {
+                    System.out.println("Mediatype detected: " + contentType + ", attempting to read lines");
+                    return Files.readAllLines(file.toPath());
+                }
+            }
+        } catch (IOException exception) {
+            System.out.println("Could not read lines from file at " + file.getPath());
+            exception.printStackTrace();
+            return new ArrayList<>();
+        }
+    }
+
+    private static List<String> getZipLines(File file) {
+        List<String> allLines = new ArrayList<>();
+        try (ZipFile zip = new ZipFile(file)) {
             Enumeration<? extends ZipEntry> entries = zip.entries();
             while (entries.hasMoreElements()) {
                 ZipEntry zipEntry = entries.nextElement();
                 InputStream inputStream = zip.getInputStream(zipEntry);
-                BufferedReader reader = new BufferedReader(new InputStreamReader(inputStream));
-                while(reader.ready()) {
-                    combinedList.add(reader.readLine());
-                }
-                reader.close();
+                List<String> lines = readLinesFromStream(inputStream);
+                allLines.addAll(lines);
             }
         } catch (IOException e) {
             e.printStackTrace();
         }
-        return combinedList;
+        return allLines;
     }
 
     // Probably single file with .gz compression
     private static List<String> getGZipLines(File file) {
         try {
             GZIPInputStream gzipInputStream = new GZIPInputStream(new FileInputStream(file));
-            BufferedReader reader = new BufferedReader(new InputStreamReader(gzipInputStream));
-            List<String> lines = reader.lines().collect(Collectors.toList());
-            reader.close();
-            return lines;
+            return readLinesFromStream(gzipInputStream);
         } catch (IOException e) {
+            System.out.println("Unable to read Gzip file");
             e.printStackTrace();
-            return List.of();
+            return Collections.emptyList();
         }
     }
 
-    public static List<String> fileToStringArray(File file) {
-        try {
-            String contentType = new Tika().detect(file);
-
-            switch (contentType) {
-                case ZIP, ZIP_COMPRESSED -> { return getUnzippedLines(file); }
-                case GZIP, X_GZIP -> { return getGZipLines(file); }
-                default -> { return Files.readAllLines(file.toPath()); }
-            }
-        } catch (IOException exception) {
-            System.out.println("Could not read lines from input file at " + file.getPath());
-            exception.printStackTrace();
-            return new ArrayList<>();
+    private static List<String> readLinesFromStream(InputStream stream) {
+        try (BufferedReader reader = new BufferedReader(new InputStreamReader(stream))) {
+            return reader.lines().collect(Collectors.toList());
+        } catch (IOException e) {
+            System.out.println("Unable to read stream from zipped file");
+            return Collections.emptyList();
         }
     }
 
-    public static void writeToFile(List<String> lines, String outputFileName) {
+    public static void writeToFile(List<String> lines, String outputFilename) {
         try {
-            Files.write(Paths.get(outputFileName), lines, StandardCharsets.UTF_8);
+            Files.write(Paths.get(outputFilename), lines);
         } catch (Exception e) {
             e.printStackTrace();
         }
-    }
-
-    public static String removeExtensionFromFileName(String originalFileName) {
-        if (originalFileName.contains(".")) {
-            return originalFileName.substring(0, originalFileName.lastIndexOf("."));
-        }
-        return originalFileName;
     }
 }
